--- a/notebooks/Feature Selection - Selection feature - Comparing Methods .ipynb
+++ b/notebooks/Feature Selection - Selection feature - Comparing Methods .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,12 +157,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Comparaisons méthodes de sélection de features "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans ce notebook on essaye de sélectionner des features qui semblent signifiant pour une étude avec des modèles plus poussés.\n",
+    "\n",
+    "On utilise :\n",
+    "\n",
+    "    -La fonction SelectKBest utilisé avec une chi2\n",
+    "    -Une méthode de Recursive Feature Elimination essayée avec 5 modèles "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Librairies "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -196,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_de_feature=10 # ici on chosit le nombre de variable à \"shortlister\"\n",
+    "nombre_de_feature=20 # ici on chosit le nombre de variable à \"shortlister\"\n",
     "\n",
     "selection_best_feature = SelectKBest(score_func=chi2, k=nombre_de_feature)\n",
     "selected_feat_fit = selection_best_feature.fit(X, Y)"
@@ -235,24 +254,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Poids', 'time_on_waiting_liste', 'ends_operation_day', 'BIS SR_max',\n",
-       "       'VT_max', 'FC_min', 'FiO2_min', 'PAPdia_min', 'PASm_min', 'SpO2_min'],\n",
+       "Index(['Age_donor', 'LAS', 'PF_donor', 'Poids', 'Tabagisme_donor',\n",
+       "       'time_on_waiting_liste', 'start_operation_day', 'ends_operation_day',\n",
+       "       'B.I.S_mean', 'VT_mean', 'BIS SR_std', 'SpO2_std', 'B.I.S_max',\n",
+       "       'BIS SR_max', 'VT_max', 'FC_min', 'FiO2_min', 'PAPdia_min', 'PASm_min',\n",
+       "       'SpO2_min'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_col[selected_feat_fit.get_support()]"
+    "selection_featur_selectKbest=X_col[selected_feat_fit.get_support()]\n",
+    "selection_featur_selectKbest"
    ]
   },
   {
@@ -271,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -286,11 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_de_feature=10 # ici on chosit le nombre de variable à \"shortlister\""
+    "nombre_de_feature=20 # ici on chosit le nombre de variable à \"shortlister\""
    ]
   },
   {
@@ -302,36 +325,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "log_reg = LogisticRegression()\n",
-    "rfe_log_reg = RFE(log_reg, 10)\n",
+    "rfe_log_reg = RFE(log_reg, nombre_de_feature)\n",
     "fit_log_reg = rfe_log_reg.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['Aspirations_donor', 'PFO', 'preoperative_mechanical_ventilation',\n",
-       "       'preoperative_vasopressor', 'retransplant', 'sexe', 'PASd_mean',\n",
-       "       'declampage_cote1_done_mean', 'declampage_cote2_done_mean', 'FR_min'],\n",
+       "       'preoperative_vasopressor', 'retransplant', 'sexe',\n",
+       "       'thoracic_surgery_history', 'BIS SR_mean', 'ETCO2_mean', 'PASd_mean',\n",
+       "       'PASm_mean', 'PEEPtotal_mean', 'declampage_cote1_done_mean',\n",
+       "       'declampage_cote2_done_mean', 'BIS SR_std', 'PNId_std', 'PNIm_std',\n",
+       "       'declampage_cote1_done_std', 'declampage_cote2_done_std', 'FR_min'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_col[fit_log_reg.support_]"
+    "selection_featur_logreg=X_col[fit_log_reg.support_]\n",
+    "selection_featur_logreg"
    ]
   },
   {
@@ -343,35 +370,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "rf = RandomForestClassifier()\n",
-    "rfe_rf = RFE(rf, 10)\n",
+    "rfe_rf = RFE(rf, nombre_de_feature)\n",
     "fit_rf = rfe_rf.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['LAS', 'body_mass_index', 'ETCO2_mean', 'FiO2_mean', 'PASm_mean',\n",
-       "       'PASs_mean', 'Temp_mean', 'FR_std', 'FiO2_std', 'PEEPtotal_std'],\n",
+       "Index(['LAS', 'Poids', 'body_mass_index', 'ETCO2_mean', 'FiO2_mean',\n",
+       "       'PASm_mean', 'Pmax_mean', 'SpO2_mean', 'Temp_mean',\n",
+       "       'declampage_cote2_done_mean', 'FC_std', 'FiO2_std', 'PASs_std',\n",
+       "       'PEEPtotal_std', 'Temp_std', 'VT_std', 'declampage_cote1_done_std',\n",
+       "       'FC_max', 'PAPsys_max', 'PASm_max'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_col[fit_rf.support_]"
+    "selection_featur_rf=X_col[fit_rf.support_]\n",
+    "selection_featur_rf"
    ]
   },
   {
@@ -383,93 +414,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "ada = AdaBoostClassifier()\n",
-    "rfe_ada = RFE(ada, 10)\n",
+    "rfe_ada = RFE(ada, nombre_de_feature)\n",
     "fit_ada = rfe_ada.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['LAS', 'ETCO2_mean', 'PASs_mean', 'Temp_mean', 'VT_mean', 'FC_std',\n",
-       "       'FiO2_std', 'PAPmoy_std', 'PEEPtotal_std', 'Pmax_std'],\n",
+       "Index(['LAS', 'Poids', 'oto_score', 'ETCO2_mean', 'PASs_mean',\n",
+       "       'PEEPtotal_mean', 'Pmax_mean', 'SpO2_mean', 'Temp_mean', 'VT_mean',\n",
+       "       'FC_std', 'FiO2_std', 'PAPmoy_std', 'PAPsys_std', 'PEEPtotal_std',\n",
+       "       'PNId_std', 'Pmax_std', 'SvO2 (m)_std', 'PAPsys_max', 'PASm_max'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_col[fit_ada.support_]"
+    "selection_featur_ada=X_col[fit_ada.support_]\n",
+    "selection_featur_ada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RFE with Gradient Boosting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### RFE with Random Forest"
+    "gb = GradientBoostingClassifier()\n",
+    "rfe_gb = RFE(gb, nombre_de_feature)\n",
+    "fit_gb = rfe_gb.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age_donor', 'LAS', 'Poids', 'body_mass_index', 'oto_score',\n",
+       "       'ETCO2_mean', 'FiO2_mean', 'PASs_mean', 'SpO2_mean', 'Temp_mean',\n",
+       "       'FC_std', 'FR_std', 'FiO2_std', 'PEEPtotal_std', 'SvO2 (m)_std',\n",
+       "       'Temp_std', 'PAPsys_max', 'PASm_max', 'FC_min', 'PASm_min'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rf = RandomForestClassifier()\n",
-    "rfe_rf = RFE(rf, 10)\n",
-    "fit_rf = rfe_rf.fit(X, Y)"
+    "selection_featur_gb=X_col[fit_gb.support_]\n",
+    "selection_featur_gb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RFE with Extra Trees "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_col[fit_rf.support_]"
+    "et = ExtraTreesClassifier()\n",
+    "rfe_et = RFE(et, nombre_de_feature)\n",
+    "fit_et = rfe_et.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LAS', 'Poids', 'body_mass_index', 'oto_score', 'start_operation_day',\n",
+       "       'ends_operation_day', 'ETCO2_mean', 'FC_mean', 'FiO2_mean', 'PASs_mean',\n",
+       "       'PNIs_mean', 'SpO2_mean', 'Temp_mean', 'declampage_cote2_done_mean',\n",
+       "       'FiO2_std', 'PAPsys_std', 'PEEPtotal_std', 'SpO2_std', 'Temp_std',\n",
+       "       'PAPdia_max'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### RFE with Random Forest"
+    "selection_featur_et=X_col[fit_et.support_]\n",
+    "selection_featur_et"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparaison des RFE "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Principe du vote :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces features sont dans toutes les listes des méthodes d'ensembles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ETCO2_mean',\n",
+       " 'FiO2_std',\n",
+       " 'LAS',\n",
+       " 'PEEPtotal_std',\n",
+       " 'Poids',\n",
+       " 'SpO2_mean',\n",
+       " 'Temp_mean'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rf = RandomForestClassifier()\n",
-    "rfe_rf = RFE(rf, 10)\n",
-    "fit_rf = rfe_rf.fit(X, Y)"
+    "vote_features_ensembles=set(selection_featur_et) & set(selection_featur_rf) & set(selection_featur_ada) & set(selection_featur_gb)\n",
+    "vote_features_ensembles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces features sont dans toutes les méthodes ensemblistes et dans le modèle linéaire"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ETCO2_mean'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_col[fit_rf.support_]"
+    "set(selection_featur_logreg) & vote_features_ensembles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces features sont dans toutes les méthodes ensemblistes et le résultat des tests du chi2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LAS', 'Poids'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vote_features_best_ensemble=set(selection_featur_selectKbest) & vote_features_ensembles\n",
+    "vote_features_best_ensemble"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces features sont dans le modèle linéaire et le résultat des tests du chi2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BIS SR_std'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vote_features_best_lineaire=set(selection_featur_logreg) & set(selection_featur_selectKbest)\n",
+    "vote_features_best_lineaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Idées de choix de features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut par exemple utiliser la liste :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PEEPtotal_std',\n",
+       " 'Temp_mean',\n",
+       " 'ETCO2_mean',\n",
+       " 'FiO2_std',\n",
+       " 'LAS',\n",
+       " 'Poids',\n",
+       " 'SpO2_mean',\n",
+       " 'BIS SR_std']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(vote_features_ensembles)+list(vote_features_best_lineaire)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ou pourquoi pas :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PEEPtotal_std',\n",
+       " 'Temp_mean',\n",
+       " 'ETCO2_mean',\n",
+       " 'FiO2_std',\n",
+       " 'LAS',\n",
+       " 'Poids',\n",
+       " 'SpO2_mean',\n",
+       " 'Age_donor',\n",
+       " 'LAS',\n",
+       " 'PF_donor',\n",
+       " 'Poids',\n",
+       " 'Tabagisme_donor',\n",
+       " 'time_on_waiting_liste',\n",
+       " 'start_operation_day',\n",
+       " 'ends_operation_day',\n",
+       " 'B.I.S_mean',\n",
+       " 'VT_mean',\n",
+       " 'BIS SR_std',\n",
+       " 'SpO2_std',\n",
+       " 'B.I.S_max',\n",
+       " 'BIS SR_max',\n",
+       " 'VT_max',\n",
+       " 'FC_min',\n",
+       " 'FiO2_min',\n",
+       " 'PAPdia_min',\n",
+       " 'PASm_min',\n",
+       " 'SpO2_min']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(vote_features_ensembles)+list(selection_featur_selectKbest)"
    ]
   },
   {
@@ -485,6 +777,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
